--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
     "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
   },
