--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "next": "^13.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
@@ -22,7 +22,7 @@
     "@types/react": "^18.0.12",
     "autoprefixer": "^10.4.13",
     "eslint": "7",
-    "eslint-config-next": "12.0.1",
+    "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.7.3"
