--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -13,18 +13,14 @@ jobs:
     if: github.actor == 'renovate[bot]'
     steps:
     - uses: actions/checkout@v4
-    - uses: pnpm/action-setup@v3
-      with:
-        version: latest
     - uses: actions/setup-node@v4
       with:
         node-version: 20.x
-        cache: pnpm
+        cache: yarn
     - name: Build checking
       run: |
-        pnpm install --frozen-lockfile
-        corepack enable
-        pnpm build
+        yarn install --frozen-lockfile
+        yarn build
     - name: Enable auto-merge for Dependabot PRs
       run: gh pr merge --auto --merge "$PR_URL"
       env:
